# riptide_simulator

./: CMakeLists.txt  package.xml  surface.py
include/riptide_simulator/: Actuator.hpp  Pool.hpp  Riptide.hpp  RiptideParameters.hpp  Simulator.hpp
msgs/: CMakeLists.txt  controlmsg.proto  multijointmsg.proto  pressuremsg.proto  quaternion.proto  spawnmsg.proto  vector3d.proto
src/: Pool.cpp  RiptideParameters.cpp  Simulator.cpp  main.cpp  riptide_spawner.cpp
