<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riptide_simulator</name>
  <version>0.0.1</version>
  <description>Riptide simulator</description>
  <maintainer email="quentin.brateau@ensta-bretagne.org">Quentin Brateau</maintainer>
  <license>GNU General Public License version 3</license>

  <depend>rclcpp</depend>
  <depend>protobuf</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>ignition-msgs8</build_depend>
  <build_depend>ignition-transport11</build_depend>
  <build_depend>kdl_parser</build_depend>

  <exec_depend>kdl_parser</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
